// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Imagen debe de mostrar el componente con la imagen deel producto 1`] = `
<div
  className="productCard undefined "
>
  <img
    alt="Imagen"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Product Imagen debe de mostrar el componente correectamente con la imagen personalizado 1`] = `
<img
  alt="Imagen"
  className="productImg undefined"
  src="https://www.adslzone.net/app/uploads-adslzone.net/2019/04/borrar-fondo-imagen.jpg"
/>
`;
